# ChainTales

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: format.yml  lint.yml
scripts/: reset_db.sh
src/apps/backend/: mypy.ini  server.py
src/apps/backend/application/: decorators.py  errors.py  factory.py  types.py
src/apps/backend/application/config/: config_service.py
src/apps/backend/application/config/internal/: config_manager.py
src/apps/backend/application/database/: database_service.py
src/apps/backend/application/database/internal/: database_manager.py
src/apps/backend/application/database/models/: database_models.py
src/apps/backend/application/forms/: kyc_form.py  post_form.py  tip_form.py  username_form.py
src/apps/backend/blueprints/admin/: __init__.py  routes.py
src/apps/backend/blueprints/app/: routes.py
src/apps/backend/blueprints/auth/: routes.py
src/apps/backend/blueprints/meta/: routes.py
src/apps/backend/blueprints/posts/: routes.py
src/apps/backend/blueprints/tips/: routes.py
src/apps/frontend/: footer.html  header.html  navbar.html  scripts.html
src/apps/frontend/admin/: index.html
src/apps/frontend/app/: index.html
src/apps/frontend/auth/: kyc.html  settings.html  username.html
src/apps/frontend/meta/: index.html
src/apps/frontend/posts/: me.html  new.html  update.html  view.html
src/apps/frontend/tips/: dashboard.html  send.html
src/assets/css/: dark.css  light.css  main.css
