[project]
name = "chaintales"
version = "0.0.0"
description = "A proof-of-concept web3-based blogging platform with KYC support"
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "flask-cors>=5.0.0",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "siwe>=4.4.0",
    "web3>=7.5.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=23.0.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.0.1",
    "ruff==0.7.0",
    "types-flask-cors>=5.0.0.20240902",
    "types-markdown>=3.7.0.20250322",
    "types-pyyaml>=6.0.12.20250326",
    "types-wtforms>=3.2.1.20250304",
]

[tool.ruff]
line-length = 85
target-version = "py312"

[tool.ruff.lint.isort]
section-order = ["typing", "standard-library", "third-party", "first-party", "local-folder", "config"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
"config" = ["config"]
